--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -56,7 +56,126 @@ div#primary.show-sidebar {
                         font-size: 45px;
                         color: #62585f;
                         text-shadow: 2px 2px #ffffff;
-                        padding-bottom: 0.3em;
+                        padding-bottom: 0.15em;
+                    }
+                }
+
+                div.post-grid {
+                    display: grid;
+                    grid-template-columns: 620px;
+                    grid-row-gap: 4em;
+                    margin: 0;
+                    padding: 0;
+                    overflow: auto;
+
+                    article.post {
+                        overflow: auto;
+
+                        a.post-link {
+                            text-decoration: none;
+                        }
+
+                        a.post-link:hover header.entry-header {
+                            background-color: #ef4634;
+                        }
+
+                        header.entry-header {
+                            width: 100%;
+                            height: 50px;
+                            background-color: #222222;
+                            display: flex;
+                            font-family: 'Open sans';
+                            font-weight: normal;
+                            color: #ffffff;
+                            border-radius: 3px;
+
+                            .entry-title {
+                                width: 100%;
+                                margin: 0;
+                                font-size: 20px;
+                                padding: 0.55em 1em;
+                            }
+
+                            span.entry-meta {
+                                margin: 0;
+                                padding: 0.4em 0.9em;
+                                border-right: 1px solid rgba($color: #ffffff, $alpha: 0.7);
+                                width: fit-content;
+                                height: inherit;
+
+                                span.post-day {
+                                    margin: 0;
+                                    padding: 0;
+                                    font-size: 25px;
+                                    height: 25px;
+                                    display: block;
+                                    line-height: 1;
+                                }
+
+                                span.post-month {
+                                    margin: 0;
+                                    padding: 0;
+                                    font-size: 14px;
+                                    height: 14px;
+                                    display: inline-block;
+                                    line-height: 1;
+                                    position: relative;
+                                    top: -0.55em;
+                                }
+                            }
+                        }
+
+                        div.entry-content {
+                            margin-top: 1em;
+                            display: flex;
+
+                            img.post-thumbnail {
+                                height: 153px;
+                                width: 220px;
+                                border-radius: 10px;
+                                object-fit: cover;
+                                margin-right: 1em;
+                            }
+
+                            div.post-content-block {
+                                font-family: 'Open sans';
+                                font-weight: normal;
+                                font-size: 14px;
+                                color: #62585f;
+                                overflow: auto;
+
+                                div.post-content-header {
+                                    display: flex;
+                                    justify-content: space-between;
+                                    margin-bottom: 0.5em;
+                                    padding-bottom: 0.35em;
+                                    border-bottom: variables.$border-bottom;
+
+                                    span.author a {
+                                        color: #ef4634;
+                                    }
+
+                                    span.number-of-comments {
+                                        color: #ef4634;
+                                    }
+                                }
+
+                                div.post-content {
+                                    overflow: auto;
+                                    line-height: 21px;
+
+                                    p {
+                                        margin: 0;
+
+                                        a.read-more {
+                                            color: #ef4634;
+                                            margin-top: 1em;
+                                            display: block;
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
