--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -94,6 +94,7 @@ div#primary.show-sidebar {
                                 margin: 0;
                                 font-size: 20px;
                                 padding: 0.55em 1em;
+                                overflow: auto;
                             }
 
                             span.entry-meta {
@@ -151,11 +152,16 @@ div#primary.show-sidebar {
                                     padding-bottom: 0.35em;
                                     border-bottom: variables.$border-bottom;
 
-                                    span.author a {
-                                        color: #ef4634;
+                                    span.author {
+                                        overflow: auto;
+
+                                        a {
+                                            color: #ef4634;
+                                        }
                                     }
 
                                     span.number-of-comments {
+                                        overflow: auto;
                                         color: #ef4634;
                                     }
                                 }
